# cppBrass

./: .gitignore  CMakeLists.txt  makefile  plot.py
Trombone/: Trombone.jucer
Trombone/Builds/MacOSX/Trombone.xcodeproj/: project.pbxproj
Trombone/JuceLibraryCode/: AppConfig.h  JuceHeader.h
Trombone/Source/: Main.cpp  MainComponent.cpp  MainComponent.h  Tube.cpp
gui/: main.cpp  serial_reader.cpp
handheld/: handheld.ino
scripts/: detection.py
src/: Global.h  LipModel.cpp  LipModel.h  LowPass.cpp  LowPass.h  MainComponent.cpp  MainComponent.h  Trombone.cpp  Trombone.h  Tube.cpp  Tube.h  global.cpp  global.h  lipmodel.cpp  lipmodel.h  lowpass.cpp  main.cpp  model_params.h  trombone.cpp  trombone.h  tube.cpp  tube.h
src/cli/: main.cpp
src/controller/: observer.h  observer.hpp  serial_controller.cpp  serial_controller.h
src/dsp/: freq_to_note.cpp  freq_to_note.h  peak_detection.cpp  peak_detection.h  sliding_dft.cpp  sliding_dft.h
src/gui/: gui_application.cpp  gui_application.h  main.cpp  note_component.cpp  note_component.h  pressure_component.cpp  pressure_component.h  slide_component.cpp  slide_component.h
src/io/: file_scanner.cpp  file_scanner.h  input_scanner.h  serial_reader.h  serial_scanner.cpp  serial_scanner.h
src/model/: MainComponent.cpp  MainComponent.h  global.h  lipmodel.cpp  lipmodel.h  lowpass.cpp  lowpass.h  trombone.cpp  trombone.h  tube.cpp  tube.h
